Material design shadow elevations creted

--- a/index.html
+++ b/index.html
@@ -33,29 +33,46 @@
       <demo-snippet class="centered-demo">
         <template>
 
-          <vsc-fab-button></vsc-fab-button>
+        <vsc-fab-button></vsc-fab-button>
 
         </template>
       </demo-snippet>
 
-      <!-- Default inactive - demo
+      <!-- Elevations - demo
       ========================= -->
 
-      <h2>Default inactive</h2>
+      <h2>Elevations</h2>
 
       <demo-snippet class="centered-demo">
         <template>
 
-          <vsc-fab-button inactive>
-          </vsc-fab-button>
+        <vsc-fab-button elevation="1"></vsc-fab-button>
+        <vsc-fab-button elevation="2"></vsc-fab-button>
+        <vsc-fab-button elevation="3"></vsc-fab-button>
+        <vsc-fab-button elevation="4"></vsc-fab-button>
+        <vsc-fab-button elevation="5"></vsc-fab-button>
 
         </template>
       </demo-snippet>
 
-      <!-- Default mini - demo
+      <!-- Inactive - demo
       ========================= -->
 
-      <h2>Default mini</h2>
+      <h2>Inactive</h2>
+
+      <demo-snippet class="centered-demo">
+        <template>
+
+        <vsc-fab-button inactive>
+        </vsc-fab-button>
+
+        </template>
+      </demo-snippet>
+
+      <!-- Mini - demo
+      ========================= -->
+
+      <h2>Mini</h2>
 
       <demo-snippet class="centered-demo">
         <template>
@@ -74,9 +91,9 @@
       <demo-snippet class="centered-demo">
         <template>
 
-          <vsc-fab-button
-            icon="https://uploaddeimagens.com.br/images/001/071/867/full/iconmonstr-fast-food-3-32.png">
-          </vsc-fab-button>
+        <vsc-fab-button
+          icon="https://uploaddeimagens.com.br/images/001/071/867/full/iconmonstr-fast-food-3-32.png">
+        </vsc-fab-button>
 
         </template>
       </demo-snippet>
@@ -96,8 +113,8 @@
           }
         </style>
 
-          <vsc-fab-button class="unicorn">
-          </vsc-fab-button>
+        <vsc-fab-button class="unicorn">
+        </vsc-fab-button>
 
         </template>
       </demo-snippet>
