--- a/vsc-fab-button.html
+++ b/vsc-fab-button.html
@@ -10,21 +10,57 @@
         display: inline-flex;
         justify-content: center;
         align-items: center;
-        background: var(--vsc-fab-button-color, #ff6d00);
+        background-color: var(--vsc-fab-button-color, #ff6d00);
         border-radius: 50%;
         width: var(--vsc-fab-button-size, 56px);
         height: var(--vsc-fab-button-size, 56px);
         margin: 8px;
       }
 
-      :host(:hover) {
-      	cursor: pointer;
-      	background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,.1));
+      /* Elevations */
+
+      :host([elevation="1"]) {
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+                    0 1px 5px 0 rgba(0, 0, 0, 0.12),
+                    0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
 
-      :host(:active) {
-      	background-image: linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,.1));
+      :host([elevation="2"]) {
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+                    0 1px 10px 0 rgba(0, 0, 0, 0.12),
+                    0 2px 4px -1px rgba(0, 0, 0, 0.4);
       }
+
+      :host([elevation="3"]) {
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14),
+                    0 1px 18px 0 rgba(0, 0, 0, 0.12),
+                    0 3px 5px -1px rgba(0, 0, 0, 0.4);
+      }
+
+      :host([elevation="4"]) {
+      box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                    0 3px 14px 2px rgba(0, 0, 0, 0.12),
+                    0 5px 5px -3px rgba(0, 0, 0, 0.4);
+      }
+
+      :host([elevation="5"]) {
+        box-shadow: 0 12px 16px 1px rgba(0, 0, 0, 0.14),
+                    0 4px 22px 3px rgba(0, 0, 0, 0.12),
+                    0 6px 7px -4px rgba(0, 0, 0, 0.4);
+      }
+
+      /* UI feedbacks */
+
+      :host(:hover) {
+        cursor: pointer;
+      }
+
+      :host([inactive]:hover) {
+        cursor: default;
+        background: #e1e1e1;
+      }
+
+      /* States */
 
       :host([mini]) {
         width: var(--vsc-fab-button-mini-size, 40px);
@@ -35,14 +71,16 @@
         background: #e1e1e1;
       }
 
+      /* Icons */
+
       .paper-button__icon {
-        width: var(--vsc-fab-button-icon-size, 22px);
-        height: var(--vsc-fab-button-icon-size, 22px);
+        width: var(--vsc-fab-button-icon-size, 24px);
+        height: var(--vsc-fab-button-icon-size, 24px);
       }
 
       .paper-button__default-icon {
-        width: var(--vsc-fab-button-icon-size, 22px);
-        height: var(--vsc-fab-button-icon-size, 22px);
+        width: var(--vsc-fab-button-icon-size, 24px);
+        height: var(--vsc-fab-button-icon-size, 24px);
         fill: var(--vsc-fab-button-deafult-icon-color, #fff);
       }
 
@@ -80,6 +118,10 @@
           inactive: {
             type: Boolean,
             value: false
+          },
+          elevation: {
+            type: Number,
+            value: 1
           }
         };
       }
