Add html button element for improve the a11y

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <demo-snippet class="centered-demo">
         <template>
 
-        <vsc-fab-button inactive>
+        <vsc-fab-button disabled>
         </vsc-fab-button>
 
         </template>
