Fix elevation default style

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <demo-snippet class="centered-demo">
         <template>
 
-        <vsc-fab-button elevation="1"></vsc-fab-button>
+        <vsc-fab-button></vsc-fab-button>
         <vsc-fab-button elevation="2"></vsc-fab-button>
         <vsc-fab-button elevation="3"></vsc-fab-button>
         <vsc-fab-button elevation="4"></vsc-fab-button>
