--- a/vsc-fab-button.html
+++ b/vsc-fab-button.html
@@ -16,15 +16,16 @@
         width: var(--vsc-fab-button-size, 56px);
         height: var(--vsc-fab-button-size, 56px);
         margin: 8px;
-      }
 
-      /* Elevations */
+        /* Elevation 1 - dafault */
 
-      :host([elevation="1"]) .fab-button {
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
                     0 1px 5px 0 rgba(0, 0, 0, 0.12),
                     0 3px 1px -2px rgba(0, 0, 0, 0.2);
+
       }
+
+      /* Elevations */
 
       :host([elevation="2"]) .fab-button {
       box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
