--- a/vsc-fab-button.html
+++ b/vsc-fab-button.html
@@ -5,6 +5,11 @@
 
     <style>
 
+      :host {
+        border-radius: 50%;
+        margin: 8px;
+      }
+
       .fab-button {
         box-sizing: border-box;
         display: inline-flex;
@@ -15,7 +20,6 @@
         border-radius: 50%;
         width: var(--vsc-fab-button-size, 56px);
         height: var(--vsc-fab-button-size, 56px);
-        margin: 8px;
 
         /* Elevation 1 - dafault */
 
