Fix default svg icon

--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
       <demo-snippet class="centered-demo">
         <template>
 
+        <style is="custom-style">
+          .burguer {
+            --vsc-fab-button-color: #ffeb00;
+          }
+        </style>
+
         <vsc-fab-button
+          class="burguer"
           icon="https://uploaddeimagens.com.br/images/001/071/867/full/iconmonstr-fast-food-3-32.png">
         </vsc-fab-button>
 
