--- a/test/vsc-fab-button_test.html
+++ b/test/vsc-fab-button_test.html
@@ -13,21 +13,99 @@
   </head>
   <body>
 
-    <test-fixture id="BasicTestFixture">
+    <test-fixture id="defaultFab">
       <template>
         <vsc-fab-button></vsc-fab-button>
+      </template>
+    </test-fixture>
+
+    <test-fixture id="disabledFab">
+      <template>
+        <vsc-fab-button disabled></vsc-fab-button>
+      </template>
+    </test-fixture>
+
+    <test-fixture id="miniFab">
+      <template>
+        <vsc-fab-button mini></vsc-fab-button>
+      </template>
+    </test-fixture>
+
+    <test-fixture id="customFab">
+      <template>
+        <vsc-fab-button icon="fake-icon-path.svg"></vsc-fab-button>
+      </template>
+    </test-fixture>
+
+    <test-fixture id="labeledFab">
+      <template>
+        <vsc-fab-button label="awesome"></vsc-fab-button>
       </template>
     </test-fixture>
 
     <script>
       suite('vsc-fab-button', () => {
 
-        test('Should render as default icon', () => {
+        let f1, f2, f3, f4, f5;
 
-          const fab = fixture('BasicTestFixture');
-          const img = fab.shadowRoot.querySelector('img');
+        setup(() => {
+          f1 = fixture('defaultFab');
+          f2 = fixture('disabledFab');
+          f3 = fixture('miniFab');
+          f4 = fixture('customFab');
+          f5 = fixture('labeledFab');
+        });
 
-          assert.equal(img.src, '');
+        test('Should render a FAB button with a default icon', () => {
+
+          const button = f1.shadowRoot.querySelector('button');
+          const img = f1.shadowRoot.querySelector('button img');
+          const imgPath = img.src.replace(/^.*[\\\/]/, '');
+          const buttonHeight = window.getComputedStyle(button, null).getPropertyValue('height');
+          const buttonWidth = window.getComputedStyle(button, null).getPropertyValue('width');
+
+          expect(button.nodeName).to.be.equal('BUTTON');
+          expect(img.nodeName).to.be.equal('IMG');
+          expect(imgPath).to.be.equal('default-icon.svg');
+          expect(buttonHeight).to.be.equal('56px');
+          expect(buttonWidth).to.be.equal('56px');
+
+        });
+
+        test('Should render a disabled FAB button', () => {
+
+          const button = f2.shadowRoot.querySelector('button');
+
+          assert.isTrue(button.disabled);
+
+        });
+
+        test('Should render a mini FAB button', () => {
+
+          const button = f3.shadowRoot.querySelector('button');
+
+          const buttonHeight = window.getComputedStyle(button, null).getPropertyValue('height');
+          const buttonWidth = window.getComputedStyle(button, null).getPropertyValue('width');
+
+          expect(buttonHeight).to.be.equal('40px');
+          expect(buttonWidth).to.be.equal('40px');
+
+        });
+
+        test('Should render a FAB button with a custom icon', () => {
+
+          const img = f4.shadowRoot.querySelector('button img');
+          const imgPath = img.src.replace(/^.*[\\\/]/, '');
+
+          expect(imgPath).to.be.equal('fake-icon-path.svg');
+
+        });
+
+        test('Should render a FAB button with a11y label', () => {
+
+          const img = f5.shadowRoot.querySelector('button img');
+
+          expect(img.alt).to.be.equal('awesome');
 
         });
 
