Toggle powers added with a11y

--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
         </template>
       </demo-snippet>
 
+      <!-- Toggle - demo
+      ========================= -->
+
+      <h2>Toggle</h2>
+
+      <demo-snippet class="centered-demo">
+        <template>
+
+        <vsc-fab-button toggle>
+        </vsc-fab-button>
+
+        </template>
+      </demo-snippet>
+
     </main>
 
   </body>
