--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
   <body>
     <script>
       // Load and run all tests (.html, .js):
-      WCT.loadSuites(['vsc-fab-button_test.html']);
+      WCT.loadSuites(['basic.html', 'a11y.html']);
     </script>
   </body>
 </html>
