Inline SVG icon added (default icon)

--- a/test/a11y.html
+++ b/test/a11y.html
@@ -43,11 +43,17 @@
       </template>
     </test-fixture>
 
+    <test-fixture id="svgFab">
+      <template>
+        <vsc-fab-button label="awesome icon"></vsc-fab-button>
+      </template>
+    </test-fixture>
+
     <script>
 
       suite('a11y', () => {
 
-        let f1, f2, f3, f4, f5, f6, f7;
+        let f1, f2, f3, f4, f5, f6;
 
         setup(() => {
           f1 = fixture('labeledFab');
@@ -55,6 +61,7 @@
           f3 = fixture('pressedFab');
           f4 = fixture('clickToggleFab');
           f5 = fixture('noToggleFab');
+          f6 = fixture('svgFab');
         });
 
         test('Should render a FAB button with a11y label', () => {
@@ -104,6 +111,14 @@
           const button = f5.shadowRoot.querySelector('button');
 
           assert.isFalse(button.hasAttribute('aria-pressed'));
+
+        });
+
+        test('Should render a default FAB button with a labeled SVG icon', () => {
+
+          const svgTitle = f6.shadowRoot.querySelector('svg title');
+          expect(svgTitle.nodeName).to.be.equal('title');
+          expect(svgTitle.textContent).to.be.equal('awesome icon')
 
         });
 
