--- a/test/a11y.html
+++ b/test/a11y.html
@@ -9,6 +9,7 @@
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
 
+    <link rel="import" href="../../polymer/polymer.html">
     <link rel="import" href="../vsc-fab-button.html">
   </head>
   <body>
@@ -21,13 +22,13 @@
 
     <test-fixture id="defaultToggleFab">
       <template>
-        <vsc-fab-button toggle></vsc-fab-button>
+        <vsc-fab-button label="awesome" toggle></vsc-fab-button>
       </template>
     </test-fixture>
 
     <test-fixture id="pressedFab">
       <template>
-        <vsc-fab-button toggle pressed></vsc-fab-button>
+        <vsc-fab-button label="awesome" toggle pressed></vsc-fab-button>
       </template>
     </test-fixture>
 
@@ -120,6 +121,10 @@
           expect(svgTitle.textContent).to.be.equal('awesome icon')
 
         });
+
+        a11ySuite('labeledFab');
+        a11ySuite('defaultToggleFab');
+        a11ySuite('pressedFab');
 
       });
 
