Improve toggle unit/a11y tests

--- a/test/a11y.html
+++ b/test/a11y.html
@@ -50,11 +50,17 @@
       </template>
     </test-fixture>
 
+    <test-fixture id="clickToggleFab">
+      <template>
+        <vsc-fab-button toggle label="awesome icon"></vsc-fab-button>
+      </template>
+    </test-fixture>
+
     <script>
 
       suite('a11y', () => {
 
-        let f1, f2, f3, f4, f5, f6;
+        let f1, f2, f3, f4, f5, f6, f7;
 
         setup(() => {
           f1 = fixture('labeledFab');
@@ -63,6 +69,7 @@
           f4 = fixture('clickToggleFab');
           f5 = fixture('noToggleFab');
           f6 = fixture('svgFab');
+          f7 = fixture('clickToggleFab');
         });
 
         test('Should render a custom icon FAB button with a11y label', () => {
@@ -119,6 +126,20 @@
           const svgTitle = f6.shadowRoot.querySelector('svg title');
           expect(svgTitle.nodeName).to.be.equal('title');
           expect(svgTitle.textContent).to.be.equal('awesome icon')
+
+        });
+
+        test('Should toggle aria-pressed values when click', () => {
+
+          const button = f7.shadowRoot.querySelector('button');
+
+          expect(button.getAttribute('aria-pressed')).to.be.equal('false');
+
+          button.click();
+          expect(button.getAttribute('aria-pressed')).to.be.equal('true');
+
+          button.click();
+          expect(button.getAttribute('aria-pressed')).to.be.equal('false');
 
         });
 
